--- a/TODO.txt
+++ b/TODO.txt
@@ -2,9 +2,10 @@
 
 #### Additions for version 1.1 ####
 
-## Implement Mystery Modules "Must not be hidden" modules. 
-## Filter the ignore list based on MM (there's no use for duplicate ignores).
-## Remember to give credit to "Itachi".
+
+## [Done] Implement Mystery Modules "Must not be hidden" modules. 
+## [Done] Filter the ignore list based on MM (there's no use for duplicate ignores).
+## [Done] Remember to give credit to "Itachi".
 ## Update Modkit for custom KMNeedy interrupt intervals. 
 ## Prevent module from interrupting after the final X minutes.
 ## Ignore modules that get an a strike (might mess-up the light).
