--- a/TODO.txt
+++ b/TODO.txt
@@ -11,7 +11,7 @@
 ## [Done] Implement interrupt that occurs when no modules are available (e.g. when none of the active modules can be blocked).
 ## [Done] Ignore modules that get an a strike (might mess-up the light).
 ## [Done] Ignore modules that are selected when interrupting.
-## Add local ignore list.
+## [Done] Add local ignore list.
 
 
 #### Additions for version 1.2 #### 
