--- a/TODO.txt
+++ b/TODO.txt
@@ -18,6 +18,15 @@
 
 ## [Done] Use .svg image in manual.
 ## [Done] Json description should be more concise and have tags. 
+## Bug: TwitchPlays doesn't work well, therefore is disabled.
+## Bug: Clickthrough bug making the mod basically unplayable.
+## Bug: The highlight of buttons isn't truly on the buttons, but next to it. 
+## Bug: Crucial report-information is no longer readable when you enter a wrong answer.
+## Bug: Yellow status light can be on when the green one is too. 
+## Bug: Yellow and green status light can disappear together, leaving no status light. 
+
+
+#### Addtitions for version 1.3 ####
 ## Intersect Twitch Plays Commands (so they are interrupted as well).
 ## Remove highlight on module when interrupted.
 ## Look at custom KMNeedy interrupt intervals
