--- a/TODO.txt
+++ b/TODO.txt
@@ -18,7 +18,7 @@
 
 ## [Done] Use .svg image in manual.
 ## [Done] Json description should be more concise and have tags. 
-## Bug: TwitchPlays doesn't work well, therefore is disabled.
+## [Done] Bug: TwitchPlays doesn't work well, therefore is disabled.
 ## Bug: Clickthrough bug making the mod basically unplayable.
 ## Bug: The highlight of buttons isn't truly on the buttons, but next to it. 
 ## Bug: Crucial report-information is no longer readable when you enter a wrong answer.
